# agent-sample

./: .gitignore  README.md  pyproject.toml
01-foundry-sdk/: 01-basic.py  02-chat.py
02-agent-framework/: 01-basic.py  02-chat.py  02-tool-auto-approve.py  03-tool-with-approval.py  04-chat.py  06-harness.py  README.md
03-agent-framework-foundry/: 01-basic.py  02-chat.py  README.md
04-language/: 01-basic.py
04-speech/: 02-stt.py
05-gradio/: 01-foundry-sdk.py  02-agent-framework.py
05-speech/: 01-tts.py
06-gradio/: 02-agent-framework.py
06-jupyter/: 01-basic.ipynb
agent-file-memory/21d8dfa8-7c88-47f8-918e-a435d1aa6bb8/: memories.md  tokyo_weekend_trip_plan.md  tokyo_weekend_trip_plan_description.md
agent-file-memory/54a5f5f6-1f99-40d5-8e90-2da7603d88f3/: book_publishing_plan.md  book_publishing_plan_description.md  memories.md
